--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "node-cron": "^3.0.3",
-    "twitter-api-v2": "1.18.0"
+    "twitter-api-v2": "^1.18.0"
   }
 }
